external-crates/move/crates/move-compiler/tests/move_2024/naming/use_fun_unbound.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/naming/use_fun_unbound.move:2:13
  │
2 │     use fun id as u64.id;
  │             ^^ Unbound function 'id' in current scope

error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/naming/use_fun_unbound.move:5:17
  │
5 │         use fun x as u64.x;
  │                 ^ Unbound function 'x' in current scope

error[E03005]: unbound unscoped name
   ┌─ tests/move_2024/naming/use_fun_unbound.move:10:17
   │
10 │         use fun $f as u64.f;
   │                 ^^ Unbound function '$f' in current scope
